...
            $0.destination == rule.destination
        }
        return foundRule == nil
    }

    private func setupAccessibilityIdentifiers() {
        executablesTable.setAccessibilityIdentifier("ExecutablesTable")
        appleEventsTable.setAccessibilityIdentifier("AppleEventsTable")
        saveButton.setAccessibilityIdentifier("SaveButton")
        uploadButton.setAccessibilityIdentifier("UploadButton")
        addExecutableButton.setAccessibilityIdentifier("AddExecutableButton")
        addAppleEventButton.setAccessibilityIdentifier("AddAppleEventButton")
        removeAppleEventButton.setAccessibilityIdentifier("RemoveAppleEventButton")
        removeExecutableButton.setAccessibilityIdentifier("RemoveExecutableButton")
        accessibilityPopUp.setAccessibilityIdentifier("AccessibilityPopUp")
        addressBookPopUp.setAccessibilityIdentifier("AddressBookPopUp")
        adminFilesPopUp.setAccessibilityIdentifier("AdminFilesPopUp")
        allFilesPopUp.setAccessibilityIdentifier("AllFilesPopUp")
...
